release 1.1.0-ea (2009-05)

release 1.0.3 (2009-04-15)
- Fixed issue 163
  https://jersey.dev.java.net/issues/show_bug.cgi?id=163
  Guice integration is supported with the jersey-guice module.
- Fixed issue 245
  https://jersey.dev.java.net/issues/show_bug.cgi?id=245
  When the Apache Adbera Java types are utilized with the jersey-atom-abdera 
  module and the client API it is ensured that parsing of the types is completed
  before the type is returned to the user (because the input stream
  is closed before the type is returned to the user it is necessary to
  the complete parsing before the input stream is closed).
- Fixed issues 257 & 259
  https://jersey.dev.java.net/issues/show_bug.cgi?id=257
  https://jersey.dev.java.net/issues/show_bug.cgi?id=259
  added null value checks to UriBuilder.replaceQueryParam and
  UriTemplate.createURIComponent (used when building uri from a map)
- Resource filters can be utilized with implicit views. Annotations
  on the class will be utilized as annotations of the AbtractMethod, specifically
  the concrete class com.sun.jersey.api.model.AbstractImplicitViewMethod.
- Ensure that when @ImplicitProduces is utilized that the most acceptable
  media type is set as the content type when an implicit view is returned.
- Fixed issue 254
  https://jersey.dev.java.net/issues/show_bug.cgi?id=254
  Some implementations of javax.naming.InitialContext return null while
  others throw a NamingException, if threre is no Object associated with
  a name when looking up an object.
- Fixed issue 251
  https://jersey.dev.java.net/issues/show_bug.cgi?id=251
  The set of methods on the Allow header is accessible using
  ClientResponse.getAllow.
- Fixed issue 230
  https://jersey.dev.java.net/issues/show_bug.cgi?id=230
  No-interface view session beans deployed in the war may also be resource
  and provided classes. Injection of Jersey/JAX-RS artifacts on to fields and
  setters will work correctly.
- Fixed issue 239